# SlideWeaver

./: .gitignore  DEMO_README.md  README.md  demo_app.py  main.py  package-lock.json  pyproject.toml  test_structure.py
config/llm/: config.yaml
configs/: config.yaml
docs/html2pptx/: findings.md  table_support.md
experimental/: .gitignore  README.md  orchestrator.js  package.json
experimental/example/: generate.js  index.html
experimental/js/: package.json
experimental/js/html2pptx/: dom_scanner.cjs  html2pptx.cjs  pptx_generator.cjs  validators.cjs
experimental/slides/: slide1.html  slide2.html  slide3.html
js/html2pptx/: cli.cjs  dom_scanner.cjs  html2pptx.cjs  pptx_generator.cjs  validators.cjs
src/backend/: __init__.py  api.py  generation_service.py  image_handler.py  schemas.py  session_manager.py
src/cli/: __init__.py  __main__.py
src/core/: __init__.py  config.py  model_provider.py  schemas.py  template_manager.py
src/core/agents/: __init__.py  orchestrator.py  slide_designer.py  slide_planner.py
src/core/prompts/: prompt_templates.py
src/core/prompts/markdown/: orchestrator.md  (+2 more)
src/frontend/: app.py
src/llm/: __init__.py  template_manager.py
src/llm/agents/: __init__.py  presentation_planner.py
src/pptx/: __init__.py
src/pptx/render/: node_render.py
src/prompts/: slide_designer.md  slide_planner.md
src/templates/css/: content.css  ending.css  title.css
src/templates/html/: content_base.html  ending_slide.html  simple_ending.html  simple_title.html  summary_base.html  title_slide.html
src/utils/: subprocess_tools.py
(+2 files in other folders)
